# zeldar

./: Cargo.toml  Dockerfile  README.md  Trunk.toml  docker-compose.yml  index.html  package-lock.json
src/: main.rs  router.rs
src/components/: mod.rs  tile.rs
src/components/layout/: footer.rs  header.rs  mod.rs
src/components/pages/: dashboard.rs  hello.rs  home.rs  mod.rs
