[package]
name = "zeldar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16.0"
yew-hooks = "0.1.42"
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
stylist = { version = "0.10.0", features = ["yew_integration"] } 
wasm-bindgen-futures = "0.4"